Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Fixed sound managers not sending new sounds to the client when the player was already tracking an entity.
- Sound managers now also run the onStart() sound predicate method on the server as well as client.