@@ -19,10 +19,6 @@
 package net.frozenblock.lib.worldgen.feature.api.features;
 
 import com.mojang.serialization.Codec;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.Set;
-import java.util.function.Predicate;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.BlockPos.MutableBlockPos;
 import net.minecraft.core.Direction;
@@ -37,10 +33,14 @@ import net.minecraft.world.level.levelgen.feature.FeaturePlaceContext;
 import net.minecraft.world.level.levelgen.feature.VegetationPatchFeature;
 import net.minecraft.world.level.levelgen.feature.configurations.VegetationPatchConfiguration;
 import org.jetbrains.annotations.NotNull;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.Set;
+import java.util.function.Predicate;
 
-public class CircularWaterloggedVegetationPatchFeature extends VegetationPatchFeature {
+public class CircularWaterloggedVegetationPatchLessBordersFeature extends VegetationPatchFeature {
 
-	public CircularWaterloggedVegetationPatchFeature(Codec<VegetationPatchConfiguration> codec) {
+	public CircularWaterloggedVegetationPatchLessBordersFeature(Codec<VegetationPatchConfiguration> codec) {
 		super(codec);
 	}
 
@@ -65,35 +65,27 @@ public class CircularWaterloggedVegetationPatchFeature extends VegetationPatchFe
 		Set<BlockPos> set = new HashSet<>();
 
 		for(int i = -xRadius; i <= xRadius; ++i) {
-			boolean bl = i == -xRadius || i == xRadius;
-
 			for(int j = -zRadius; j <= zRadius; ++j) {
-				boolean bl2 = j == -zRadius || j == zRadius;
-				boolean bl3 = bl || bl2;
-				boolean bl4 = bl && bl2;
-				boolean bl5 = bl3 && !bl4;
-				if (!bl4 && (!bl5 || config.extraEdgeColumnChance != 0.0F && !(random.nextFloat() > config.extraEdgeColumnChance))) {
-					mutableBlockPos.setWithOffset(pos, i, 0, j);
+				mutableBlockPos.setWithOffset(pos, i, 0, j);
 
-					if (Math.sqrt(mutableBlockPos.distSqr(pos)) <= xRadius) {
-						int k;
-						for (k = 0; level.isStateAtPosition(mutableBlockPos, BlockBehaviour.BlockStateBase::isAir) && k < config.verticalRange; ++k) {
-							mutableBlockPos.move(direction);
-						}
+				if (Math.sqrt(mutableBlockPos.distSqr(pos)) <= xRadius) {
+					int k;
+					for (k = 0; level.isStateAtPosition(mutableBlockPos, BlockBehaviour.BlockStateBase::isAir) && k < config.verticalRange; ++k) {
+						mutableBlockPos.move(direction);
+					}
 
-						for (k = 0; level.isStateAtPosition(mutableBlockPos, (statex) -> !statex.isAir()) && k < config.verticalRange; ++k) {
-							mutableBlockPos.move(direction2);
-						}
+					for (k = 0; level.isStateAtPosition(mutableBlockPos, (statex) -> !statex.isAir()) && k < config.verticalRange; ++k) {
+						mutableBlockPos.move(direction2);
+					}
 
-						mutableBlockPos2.setWithOffset(mutableBlockPos, config.surface.getDirection());
-						BlockState blockState = level.getBlockState(mutableBlockPos2);
-						if (level.isEmptyBlock(mutableBlockPos) && blockState.isFaceSturdy(level, mutableBlockPos2, config.surface.getDirection().getOpposite())) {
-							int l = config.depth.sample(random) + (config.extraBottomBlockChance > 0.0F && random.nextFloat() < config.extraBottomBlockChance ? 1 : 0);
-							BlockPos blockPos = mutableBlockPos2.immutable();
-							boolean bl6 = this.placeGround(level, config, state, random, mutableBlockPos2, l);
-							if (bl6) {
-								set.add(blockPos);
-							}
+					mutableBlockPos2.setWithOffset(mutableBlockPos, config.surface.getDirection());
+					BlockState blockState = level.getBlockState(mutableBlockPos2);
+					if (level.isEmptyBlock(mutableBlockPos) && blockState.isFaceSturdy(level, mutableBlockPos2, config.surface.getDirection().getOpposite())) {
+						int l = config.depth.sample(random) + (config.extraBottomBlockChance > 0.0F && random.nextFloat() < config.extraBottomBlockChance ? 1 : 0);
+						BlockPos blockPos = mutableBlockPos2.immutable();
+						boolean bl6 = this.placeGround(level, config, state, random, mutableBlockPos2, l);
+						if (bl6) {
+							set.add(blockPos);
 						}
 					}
 				}
@@ -129,12 +121,17 @@ public class CircularWaterloggedVegetationPatchFeature extends VegetationPatchFe
 	}
 
 	private static boolean isExposed(WorldGenLevel level, BlockPos pos, MutableBlockPos mutablePos) {
-		return isExposedDirection(level, pos, mutablePos, Direction.NORTH) || isExposedDirection(level, pos, mutablePos, Direction.EAST) || isExposedDirection(level, pos, mutablePos, Direction.SOUTH) || isExposedDirection(level, pos, mutablePos, Direction.WEST) || isExposedDirection(level, pos, mutablePos, Direction.DOWN);
+		return isExposedDirection(level, pos, mutablePos, Direction.NORTH)
+			|| isExposedDirection(level, pos, mutablePos, Direction.EAST)
+			|| isExposedDirection(level, pos, mutablePos, Direction.SOUTH)
+			|| isExposedDirection(level, pos, mutablePos, Direction.WEST)
+			|| isExposedDirection(level, pos, mutablePos, Direction.DOWN);
 	}
 
 	private static boolean isExposedDirection(@NotNull WorldGenLevel level, BlockPos pos, @NotNull MutableBlockPos mutablePos, Direction direction) {
 		mutablePos.setWithOffset(pos, direction);
-		return !level.getBlockState(mutablePos).isFaceSturdy(level, mutablePos, direction.getOpposite());
+		BlockState state = level.getBlockState(mutablePos);
+		return !state.isFaceSturdy(level, mutablePos, direction.getOpposite()) && !state.is(Blocks.WATER);
 	}
 
 	@Override
@@ -149,5 +146,17 @@ public class CircularWaterloggedVegetationPatchFeature extends VegetationPatchFe
 		} else {
 			return false;
 		}
+	}
+
+	@Override
+	protected boolean placeGround(WorldGenLevel level, VegetationPatchConfiguration config, Predicate<BlockState> replaceableblocks, RandomSource random, BlockPos.MutableBlockPos mutablePos, int maxDistance) {
+		for (int i = 0; i < maxDistance; ++i) {
+			BlockState blockState2 = level.getBlockState(mutablePos);
+			if (!replaceableblocks.test(blockState2)) {
+				return i != 0;
+			}
+			mutablePos.move(config.surface.getDirection());
+		}
+		return true;
 	}
 }
